test/sema/too-few-arguments.delta.output
too-few-arguments.delta:6:25: error: too few arguments to 'sum', expected 2
void main() { var foo = sum(1); }
                        ^
